feat scale carousel image

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <i class="fa-regular fa-circle-right next"></i>
             </div>  
         </div>
+        <div class="thumbnails-container"></div>
     </div>
 </body>
 <script type="text/javascript" src="myscript.js"></script>
